FIX: Show current date on mobile calendar
Closes #173

--- a/less/custom.less
+++ b/less/custom.less
@@ -69,6 +69,9 @@
 		.jeveventrow {
 			min-height: 0;
 		}
+		.jev_toprow .jev_header2_container  div.currentmonth {
+			color: #4D4D4D !important;
+		}
 		.jev_listrow {
 			.eventfull {
 				margin-top: 0px;
